# ovim

./: .gitignore  .mcp.json  ACTION_PLAN_FOR_IMPROVEMENTS.md  AREAS_FOR_IMPROVEMENT.md  ASYNC_LSP_BUG_REPORT.md  ASYNC_STATUS_LINE.md  BLOCKING_CALLS_FIX.md  BRACKET_MATCHING_IMPLEMENTATION.md  BUG_FIXES_SESSION_2.md  CLAUDE.md  CLOSED_ISSUES.md  CODESIGNING.md  Cargo.toml  DAEMON_EDGE_CASES_DEEP_DIVE.md  DAEMON_EDGE_CASES_TESTS.md  DAEMON_IMPLEMENTATION_CHECKLIST.md  DAEMON_IMPLEMENTATION_PLAN.md  DESIGN.md  ENGINEER_ONBOARDING.md  EVENT_LOOP_LOCK_FIX.md  FIND_MOTIONS_IMPLEMENTATION.md  FIXES_AND_REMAINING_ISSUES.md  HOVER_FIX_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_RUST.md  INVESTIGATION_SUMMARY.md  ISSUE_TRACKER.md  JAVA_FIXES_SUMMARY.md  JAVA_IDE_FEATURES.md  JAVA_IDE_MISSING_FEATURES.md  JAVA_INTEGRATION_PLAN.md  JAVA_JDTLS_BUG_REPORT.md  JAVA_NON_BLOCKING_FIX.md  JAVA_PERFORMANCE_TEST.md  JAVA_STATUS_LINE_FIX.md  JAVA_SUPPORT_SUMMARY.md  JDTLS_EXTRACTION_FIX.md  JDTLS_INIT_FREEZE_FIX.md  (+88 more)
.cargo/: config.toml
ovim/: Cargo.toml  languages.toml
ovim-core/: Cargo.toml  languages.toml
ovim-core/src/: change.rs  cmd_buffer.rs  cmd_set.rs  color.rs  command_result.rs  commands.rs  coordinates.rs  dashboard.rs  debug_config.rs  display.rs  edit.rs  edit_log.rs  key.rs  language_config.rs  lib.rs  log.rs  markdown_conceal.rs  navigation_types.rs  number_ops.rs  rect.rs  repeat_action.rs  search.rs  session.rs  textobjects.rs  wrap.rs
ovim-core/src/agent_runtime/: approval.rs  dispatch.rs  fake_provider.rs  handoff.rs  headless.rs  loop_runner.rs  mailbox.rs  mod.rs  model_catalog.rs  profile_provider.rs  projection.rs  service.rs  supervisor.rs  workspace.rs  workspace_layout.rs
ovim-core/src/ai/: auto_classifier.rs  auto_mode.rs  change_set.rs  chat_types.rs  codex_app_server.rs  codex_inference.rs  config.rs  exa.rs  extract.rs  intent.rs  mod.rs  path_policy.rs  project_context.rs  prompt.rs  provider.rs  sanitization.rs  scope.rs  skills.rs  stream_parsers.rs  types.rs
ovim-core/src/buffer/: cursor.rs  file_io.rs  highlighting.rs  line_ending.rs  mod.rs  text_ops.rs
ovim-core/src/dap/: client.rs  mod.rs  protocol.rs  state.rs  types.rs
ovim-core/src/editor/: ai_agent.rs  ai_base_manifest.rs  ai_chat.rs  ai_chat_commands.rs  ai_chat_exa.rs  ai_chat_images.rs  ai_chat_input.rs  ai_chat_mutations.rs  ai_chat_presentation.rs  ai_chat_queue.rs  ai_chat_review.rs  ai_chat_scratch.rs  ai_chat_selection.rs  ai_chat_session.rs  ai_chat_state.rs  ai_chat_tools.rs  ai_chat_turn.rs  ai_chat_viewport.rs  ai_code_explanation.rs  ai_comprehension.rs  ai_context.rs  ai_durable_chat.rs  ai_integration.rs  ai_run_events.rs  ai_shell_process.rs  ai_skills.rs  ai_state.rs  ai_subagents.rs  ai_tool_execution.rs  ai_tool_path.rs  ai_tool_streaming.rs  ai_workflow.rs  blame_commands.rs  buffer_manager.rs  build_state.rs  change_tracking.rs  code_explanation.rs  command_context.rs  command_history.rs  completion.rs  (+43 more)
ovim-core/src/git/: mod.rs
ovim-core/src/lsp/: logger.rs  mod.rs  notifications.rs  position.rs  protocol.rs  requests.rs  server.rs  supervisor.rs  trigger_chars.rs  utils.rs
ovim-core/src/lua/: ai_api.rs  api.rs  builtin.lua  editor_bridge.rs  mod.rs  util.rs
ovim-core/src/metrics/: mod.rs
ovim-core/src/mode/: mod.rs
ovim-core/src/run_log/: artifact.rs  catalog.rs  event.rs  identity.rs  layout.rs  liveness.rs  local_store.rs  manifest.rs  manifest_git.rs  mod.rs  query.rs  recovery.rs  replay.rs  repository.rs  sqlite.rs  store.rs  workspace_capture.rs
ovim-core/src/syntax/: code_blocks.rs  highlighter.rs  languages.rs  theme.rs
ovim-core/src/unicode/: mod.rs
ovim/src/: cli.rs  client.rs  commands.rs  event_loop.rs  key_convert.rs  lib.rs  main.rs  mcp_stdio_server.rs  session.rs  subcommands.rs
ovim/src/api/: handlers.rs  mcp.rs  mcp_handler.rs  mod.rs  routes.rs  state.rs
ovim/src/buffer/: text_ops.rs
ovim/src/daemon/: lock.rs  mod.rs  pid.rs  process.rs  protocol.rs
ovim/src/editor/: change_tracking.rs  command_context.rs  command_history.rs  fuzzy.rs  grep.rs  lsp_integration.rs  lua_integration.rs  macros.rs  mod.rs  operators.rs  quickfix.rs  render_cache.rs  theme.rs  ui_features.rs  ui_panels.rs  visual_context.rs
ovim/src/lsp/: mod.rs  protocol.rs  supervisor.rs
ovim/src/lsp_init/: auto_install.rs  java.rs  mod.rs
ovim/src/lua/: api.rs  mod.rs
ovim/src/syntax/: languages.rs
ovim/src/ui/: ansi.rs  mod.rs  terminal.rs
ovim/tests/: README.md  advanced_editing_test.rs  ai_prompt_test.rs  all_languages_test.rs  ansi_render_cache_test.rs  bracket_motion_test.rs  buffer_version_test.rs  bug_reproduction_test.rs  case_change_test.rs  centered_diagnostic_layout_test.rs  change_operations_test.rs  change_operations_test.rs.backup  command_global_test.rs  command_mode_test.rs  completion_menu_test.rs  completion_undo_corruption_test.rs  conceal_mouse_click_test.rs  conceal_wrap_width_test.rs  ctrl_commands_test.rs  ctrl_e_y_scroll_test.rs  cursor_clamping_test.rs  decoration_drift_test.rs  decoration_projection_test.rs  decoration_snapshot_test.rs  decoration_step_e_test.rs  delete_operations_test.rs  diagnostic_navigation_test.rs  dot_repeat_test.rs  editor_bug_tests.rs  emoji_tab_rendering_test.rs  error_handling_test.rs  ex_command_bughunt_test.rs  expandtab_test.rs  file_tree_render_test.rs  find_repeat_test.rs  find_visual_selection_test.rs  gg_motion_operators_test.rs  gi_grr_commands_test.rs  go_open_below_wrap_test.rs  goal_column_test.rs  (+109 more)
ovim/tests/daemon/: test_basic_lifecycle.sh  test_critical_edge_cases.sh
ovim/tests/helpers/: dsl.rs  editor_test_macro.rs  key_test_macro.rs  mod.rs  test_session.rs  viewport_assertions.rs
ovim/tests/snapshots/: macro_test__at_at_repeat_last.snap  macro_test__at_with_count.snap  macro_test__empty_macro.snap  macro_test__macro_at_eof.snap  macro_test__macro_complex_insert.snap  macro_test__macro_insert_mode.snap  macro_test__macro_line_operations.snap  macro_test__macro_uppercase_register.snap  macro_test__macro_visual_line.snap  (+45 more)
(+1228 files in other folders)
