[package]
name = "ovim"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1.6"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
regex = "1.10"
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-highlight = "0.23"
lsp-types = "0.95"
url = "2.5"
mlua = { version = "0.9", features = ["luajit", "async", "serialize"], optional = true }
ignore = "0.4"
dashmap = "6.0"
reqwest = { version = "0.12.23", features = ["json"] }
lazy_static = "1.4"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[features]
default = []
lua = ["mlua"]

[dev-dependencies]
criterion = "0.5"
reqwest = { version = "0.12.23", features = ["json"] }
insta = "1.40"
