[package]
name = "ovim"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1.6"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
unicode-width = "0.1"
regex = "1.10"
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.6"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-highlight = "0.23"
tree-sitter-md = "0.5"
lsp-types = "0.97"
url = "2.5"
mlua = { version = "0.9", features = ["luajit", "async", "serialize"], optional = true }
ignore = "0.4"
dashmap = "6.0"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
lazy_static = "1.4"
chrono = "0.4"
git2 = "0.19"
dirs = "5.0"
arboard = "3.4"
encoding_rs = "0.8"
chardetng = "0.1"
prometheus = { version = "0.13", optional = true }
toml = "0.8"
which = "6.0"
shellexpand = "3.1"
tempfile = "3.14"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.32"

[features]
default = ["lua"]
lua = ["mlua"]
metrics = ["prometheus"]

[dev-dependencies]
criterion = "0.5"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
insta = "1.40"
rand = "0.8"
proptest = "1.5"
futures = "0.3"
