[workspace]
members = ["ovim-core", "ovim"]
resolver = "2"

[workspace.lints.clippy]
# Stylistic lints we deliberately don't enforce
collapsible_if = "allow"
too_many_arguments = "allow"
# Its auto-fix moves conditions into match guards, changing arm fall-through
# (a key swallowed by an empty arm would instead reach later arms).
collapsible_match = "allow"
