[package]
name = "ovim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"

# mode/ - no extra deps
# unicode/
unicode-segmentation = "1.10"
# display.rs
unicode-width = "0.1"
# modeline.rs - no extra deps (only std)
# log.rs
lazy_static = "1.4"
chrono = "0.4"
dirs = "5.0"
# language_config.rs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
which = "6.0"
shellexpand = "3.1"
# git/
git2 = "0.19"
anyhow = "1.0"
# session.rs
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
# lsp/
lsp-types = "0.97"
dashmap = "6.0"
tokio = { version = "1.35", features = ["full"] }
url = "2.5"
# metrics/
prometheus = { version = "0.13", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
sysinfo = "0.32"

[dev-dependencies]
tempfile = "3.14"

[features]
default = []
metrics = ["prometheus"]
