[package]
name = "ovim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"

# mode/ - no extra deps
# unicode/
unicode-segmentation = "1.10"
# display.rs
unicode-width = "0.1"
# modeline.rs - no extra deps (only std)
# log.rs
lazy_static = "1.4"
chrono = "0.4"
dirs = "5.0"
# language_config.rs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
which = "6.0"
shellexpand = "3.1"
# git/
git2 = "0.19"
anyhow = "1.0"
# session.rs
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
# lsp/
lsp-types = "0.97"
dashmap = "6.0"
tokio = { version = "1.35", features = ["full"] }
url = "2.5"
# metrics/
prometheus = { version = "0.13", optional = true }
# buffer/
ropey = "1.6"
encoding_rs = "0.8"
chardetng = "0.1"
# syntax/
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.6"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.5"
tree-sitter-zig = "1.1.2"
streaming-iterator = "0.1.9"
regex = "1.10"
# lua/
mlua = { version = "0.9", features = ["luajit", "async", "serialize"], optional = true }
# editor/
ignore = "0.4"
arboard = "3.4"
nucleo = "0.5"
grep-regex = "0.1"
grep-searcher = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
sysinfo = "0.32"

[dev-dependencies]
tempfile = "3.14"

[features]
default = []
metrics = ["prometheus"]
lua = ["mlua"]
