[package]
name = "ovim-core"
version = "0.1.1"
edition = "2021"
description = "Core library for ovim (Oxidized Vim) — buffer, syntax, LSP, session, and editor primitives."

[dependencies]
bitflags = "2"

# mode/ - no extra deps
# unicode/
unicode-segmentation = "1.12"
# display.rs
unicode-width = "0.1"
# modeline.rs - no extra deps (only std)
# log.rs
lazy_static = "1.4"
chrono = "0.4"
dirs = "5.0"
# language_config.rs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
serde_yaml = "0.9"
toml = "0.8"
which = "6.0"
shellexpand = "3.1"
# git/
git2 = "0.19"
anyhow = "1.0"
# session.rs
reqwest = { version = "0.12.23", features = ["json", "blocking", "stream"] }
futures-core = "0.3"
bytes = "1"
base64 = "0.22"
shlex = "1.3"
# lsp/
lsp-types = "0.97"
dashmap = "6.0"
tokio = { version = "1.35", features = ["full"] }
url = "2.5"
# metrics/
prometheus = { version = "0.13", optional = true }
# buffer/
ropey = "1.6"
encoding_rs = "0.8"
chardetng = "0.1"
# syntax/
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.6"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.5"
tree-sitter-zig = "1.1.2"
tree-sitter-scala = "0.24"
tree-sitter-groovy = "0.1.2"
tree-sitter-sequel = "0.3"
tree-sitter-c-sharp = "0.23"
tree-sitter-hcl = "1.1"
tree-sitter-wgsl-bevy = "0.1.4"
streaming-iterator = "0.1.9"
regex = "1.10"
minijinja = "2.0"
jsonschema = "0.28"
# lua/
mlua = { version = "0.9", features = ["lua54", "vendored", "async", "serialize"], optional = true }
# editor/
ignore = "0.4"
arboard = { version = "3.4", features = ["wayland-data-control"] }
nucleo = "0.5"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.32"

[dev-dependencies]
tempfile = "3.14"

[features]
default = []
metrics = ["prometheus"]
lua = ["mlua"]
