[package]
name = "ovim"
version = "0.1.6"
edition = "2024"
description = "Oxidized Vim — a snappy, batteries-included terminal editor with Vim keybindings, Lua config, LSP, and AI built in."

[lints]
workspace = true

[dependencies]
ovim-core = { path = "../ovim-core" }
ratatui = "0.29"
ratatui-image = { version = "9.0.0", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
anyhow = "1.0"
unicode-width = "0.1"
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
lsp-types = "0.97"
mlua = { version = "0.9", features = ["lua54", "vendored", "async", "serialize"], optional = true }
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
dirs = "5.0"
prometheus = { version = "0.13", optional = true }
which = "6.0"
shellexpand = "3.1"
tempfile = "3.14"
ignore = "0.4"
unicode-segmentation = "1.12"
open = "5"
flate2 = "1"
tar = "0.4"
zip = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.32"

[features]
default = ["lua"]
lua = ["mlua", "ovim-core/lua"]
metrics = ["prometheus", "ovim-core/metrics"]
# Statically link OpenSSL for portable release binaries
vendored = ["ovim-core/vendored", "reqwest/native-tls-vendored"]

[dev-dependencies]
tree-sitter = "0.25"
streaming-iterator = "0.1.9"
insta = "1.40"
rand = "0.8"
proptest = "1.5"
